test(view): should accept positive integer on first try in DeleteMomentView